# MSR_music_downloader

./: .gitignore  README.md  download_ALL_song.py  download_music.py  downloadallsong.py  downloadmusic.py  downloadvid.py  downloadvidlinux.py  getalbum.py  output.txt  pyproject.toml  requirements.txt  test_03.py
Miss You/lyrcs/: Miss You.lrc
_internal/: _asyncio.pyd  _bz2.pyd  _ctypes.pyd  _decimal.pyd  _hashlib.pyd  _lzma.pyd  _multiprocessing.pyd  _overlapped.pyd  _queue.pyd  _socket.pyd  _ssl.pyd  _uuid.pyd  _wmi.pyd  pyexpat.pyd  select.pyd  unicodedata.pyd
html/: output.txt  style.css  test_03.html
nonflac/: download_all_song_nonflac.py  download_music_nonflac.py
