[project]
name = "msr-music-downloader"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "certifi==2025.4.26",
    "charset-normalizer==3.4.2",
    "idna==3.10",
    "mutagen==1.47.0",
    "pydub==0.25.1",
    "pyinstaller>=6.17.0",
    "requests==2.32.3",
    "tqdm==4.67.1",
    "urllib3==2.4.0",
]
